--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@babel/node": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "await-to-js": "^3.0.0",
+    "axios": "^0.24.0",
+    "base64-img": "^1.0.4",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.1",
+    "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "joi": "^17.5.0",
     "multer": "^1.4.4",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
